--- a/nginx-docker/nginx.conf
+++ b/nginx-docker/nginx.conf
@@ -1,4 +1,5 @@
 upstream my-app {
+    least_conn;
     server 172.17.0.1:8081 weight=1;
     server 172.17.0.1:8082 weight=1;
     server 172.17.0.1:8083 weight=1;
